--- a/.editorconfig
+++ b/.editorconfig
@@ -12,12 +12,11 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.yaml]
-# indent_size = 2
-indent_style = space
-
-[{compose.yaml,compose.*.yaml}]
 indent_size = 2
 indent_style = space
+
+[{config/*.yaml,config/*/*.yaml}]
+indent_size = 4
 
 [*.json]
 indent_size = 2
